# mcp-deck-server

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/context/: mcp_sdk.md  mcp_servers_in_vscode.md  nextcloud_deck_api.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml
mcp_deck_server/: client.py  config.py  models.py  server.py
project-spec/: constraints.md  implementation-plan.md  infrastructure.md  interfaces.md  project.md  todos.md
project-spec/decisions/2026-02-21/: 001-lifespan-httpx-client.md  002-raise-on-errors.md  003-fix-move-card-n-plus-1.md  004-configurable-transport.md  005-restructure-to-src-layout.md  006-test-strategy.md  007-ci-pipeline.md  008-deck-api-investigation.md  009-documentation.md  010-security-review.md  011-performance-review.md
project-spec/decisions/2026-02-22/: 012-architecture-coherence-revision.md
project-spec/decisions/2026-02-23/: 013-deck-api-investigation-findings.md
project-spec/decisions/2026-03-27/: 014-live-api-validation-findings.md
project-spec/decisions/2026-03-28/: 015-get-assigned-cards-tool.md  016-update-card-exhaustive-merge.md  017-agent-ergonomics.md
tests/: conftest.py  helpers.py  test_timing.py
tests/fixtures/: assigned_card.json  board.json  boards_list.json  card.json  card_done.json  card_reorder_response.json  error_400.json  error_403.json  stack.json  stacks_list.json
tests/integration/: conftest.py  test_deck_roundtrip.py  test_live_contracts.py
tests/unit/: test_client.py  test_config.py  test_models.py  test_tools.py
